// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconGPlus /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconGPlus /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconGPlus /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconGPlus /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconGPlus /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconGPlus /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconGPlus /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M255 134v26h-22v-26h-25v-22h25V87h22v25h24v22h-24zm-61.3-21h-82v28h47.9c-7.1 35.7-55.3 48.2-81.1 24.9-26.5-20.4-25.3-65.3 2.3-84.3 19.3-15.3 46.7-11.5 66 1.7 7.6-7 14.7-14.4 21.5-22.2-16-12.7-35.7-21.8-56.6-20.8-43.8-1.4-83.9 36.7-84.6 80.2-2.8 35.6 20.5 70.9 53.9 83 33 12 75.4 3.8 96.5-25.5 13.5-18.9 16.2-42.9 16.2-65z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
